database json gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,7 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+# Database file
+Assets/database.json
+Assets/database.json.meta
