--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Assets/Project[[:space:]]Resources/Images/Images_Chapter2/Background/ash[[:space:]]2챕[[:space:]]보스[[:space:]]배경.psb filter=lfs diff=lfs merge=lfs -text
+*.mp4 filter=lfs diff=lfs merge=lfs -text
